# minsky-genes

./: .gitignore  main.py  main_2.py  pyproject.toml
core/: calculator.py  diff.py  drawer.py
experiments/: experiment.py
exploration/: nca.ipynb
genetic/: algorithm.py  evolve.py  genotype.py  individual.py  meta.py  phenotype.py  population.py  selection.py  utils.py
shape/: image.py
voronoi/: generator.py
