[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Bregy Malpartida", email = "bregy@minsky.cc"},
]
dependencies = [
    "numpy~=1.21",
    "scipy~=1.6",
    "matplotlib~=3.4",
    "shapely~=1.7",
    "Pillow~=8.3",
    "tqdm~=4.62",
    "pandas~=1.3",
]
requires-python = ">=3.9"
dynamic = ["classifiers"]
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "tk~=0.1",
    "mypy~=0.910",
]

[tool.autopep8]
max_line_length = 120


[tool.poetry]
name = "minsky-genes"
version = "0.1.0"
description = ""
authors = ["Bregy Malpartida <bregy@minsky.cc>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.10"
numpy = "^1.22.1"
scipy = "^1.7.3"
matplotlib = "^3.5.1"
Shapely = "^1.8.0"
Pillow = "^9.0.0"
tqdm = "^4.62.3"
pandas = "^1.4.0"

[tool.poetry.dev-dependencies]
mypy = "^0.931"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
